--- a/source/SuccessStory.csproj
+++ b/source/SuccessStory.csproj
@@ -196,6 +196,7 @@
     </Compile>
     <Compile Include="Converters\Crc32.cs" />
     <Compile Include="Converters\SetColorConverter.cs" />
+    <Compile Include="Models\AchProgression.cs" />
     <Compile Include="Models\GenshinImpact\StartDbExport.cs" />
     <Compile Include="Models\HonkaiStarRail\AchievementData.cs" />
     <Compile Include="Models\GenshinImpact\PaimonMoeAchievements.cs" />
@@ -204,15 +205,16 @@
     <Compile Include="Models\HonkaiStarRail\AchievementSeries.cs" />
     <Compile Include="Models\HonkaiStarRail\StairRailStationData.cs" />
     <Compile Include="Models\HonkaiStarRail\StairRailStationExport.cs" />
+    <Compile Include="Models\Stats\AchProgressionTotal.cs" />
     <Compile Include="Models\PSN\TropyTitlesResponse.cs" />
     <Compile Include="Models\RetroAchievements\RaConsole.cs" />
     <Compile Include="Models\RetroAchievements\RaGame.cs" />
     <Compile Include="Models\RetroAchievements\RaMd5List.cs" />
     <Compile Include="Models\RetroAchievements\RaPlatformType.cs" />
     <Compile Include="Models\BattleNetSc2User.cs" />
-    <Compile Include="Models\Stats\AchievementsGraphicsDataCount.cs" />
-    <Compile Include="Models\Stats\AchievementsGraphicsDataCountSources.cs" />
-    <Compile Include="Models\Stats\AchievementsGraphicsDataSources.cs" />
+    <Compile Include="Models\Stats\AchGraphicsDataCount.cs" />
+    <Compile Include="Models\Stats\AchGraphicsDataCountSources.cs" />
+    <Compile Include="Models\Stats\AchGraphicsDataSources.cs" />
     <Compile Include="Models\WutheringWaves\WuWaAchievement.cs" />
     <Compile Include="Models\WutheringWaves\WuWaCategory.cs" />
     <Compile Include="Models\WutheringWaves\WuWaGroup.cs" />
@@ -632,7 +634,6 @@
     <Compile Include="Models\GuildWars2\GW2OwnedAchievements.cs" />
     <Compile Include="Models\ListAll.cs" />
     <Compile Include="Models\ListGames.cs" />
-    <Compile Include="Models\ProgressionAchievements.cs" />
     <Compile Include="Models\GameAchievements.cs" />
     <Compile Include="Models\PSN\PSN_NPWR_LIST.cs" />
     <Compile Include="Models\QuickSearchItemSource.cs" />
