--- a/manifest/Lacro59_SuccessStory.yaml
+++ b/manifest/Lacro59_SuccessStory.yaml
@@ -400,3 +400,25 @@ Packages:
       - 'Fixed: "Electronic Arts" default filter not working'
       - 'Fixed: Issue on GOG achievements (thanks to Jhanlon95)'
       - 'Fixed: Issue on Steam achievements (thanks to Kryeker)'
+  - Version: 3.5
+    RequiredApiVersion: 6.11.0
+    ReleaseDate: 2025-05-16
+    PackageUrl: https://github.com/Lacro59/playnite-successstory-plugin/releases/download/v3.5/playnite-successstory-plugin_3_5.pext
+    Changelog:
+      - 'Updated: Localizations'
+      - 'Fixed: TrueAchievements / TrueSteamAchievements'
+      - 'Optimized: UI'
+      - 'Added: Game Jolt achievements'
+      - 'Fixed: Some Exophase issues'
+      - 'Optimized: RPCS3 (thanks to eFMann)'
+      - 'Fixed: Error when DateWhenUnlocked is null'
+      - 'Fixed: Imported achievements from Genshin Impact keeps resetting'
+      - 'Updated: Genshin Impact achievements'
+      - 'Fixed: List View only showing one (duplicated) achievement for each game'
+      - 'Fixed: Issue with GamerScore on manual achievements'
+      - 'Added: Wuthering Waves achievements'
+      - 'Added: Honkai Star Rail achievements'
+      - 'Added: Zenless Zone Zero achievements'
+      - 'Added: Refresh button on the achievements pages'
+      - 'Fixed: Errors that appear differently when manually dated'
+      - 'Fixed: Some errors'
