--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -1,1 +1,4 @@
-ignored_branch: "l10n_master, l10n_devel"
+# .coderabbit.yaml
+
+# Ignore pull requests coming from these branches.
+ignored_branch: "l10n_master,l10n_devel"
