--- a/source/SuccessStory.csproj
+++ b/source/SuccessStory.csproj
@@ -610,7 +610,7 @@
     <Compile Include="Clients\GenshinImpactAchievements.cs" />
     <Compile Include="Clients\GuildWars2Achievements.cs" />
     <Compile Include="Clients\GogAchievements.cs" />
-    <Compile Include="Clients\OriginAchievements.cs" />
+    <Compile Include="Clients\EaAchievements.cs" />
     <Compile Include="Clients\OverwatchAchievements.cs" />
     <Compile Include="Clients\PSNAchievements.cs" />
     <Compile Include="Clients\RetroAchievements.cs" />
